<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.golfinatorandboostboiemilioooosgarage.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:fontFamily="@font/bungee_inline"
                android:padding="16dp"
                android:text="@string/business_name"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:scaleType="centerCrop"
                android:src="@drawable/eiliokswap1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/galada"
                android:text="@string/description1"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/faster_one"
                android:text="@string/description2"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@android:color/holo_orange_light"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/permanent_marker"
                    android:paddingLeft="32dp"
                    android:text="@string/address"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/permanent_marker"
                    android:paddingLeft="32dp"
                    android:text="@string/city_state_zip"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:fontFamily="@font/permanent_marker"
                    android:paddingLeft="32dp"
                    android:text="(720)-412-3559"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:fontFamily="@font/permanent_marker"
                    android:paddingLeft="32dp"
                    android:text="www.werdularmotion.com"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
